--- a/ActivityTracker/ActivityTracker/MainWindow.xaml
+++ b/ActivityTracker/ActivityTracker/MainWindow.xaml
@@ -7,13 +7,48 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="440" Width="400" ResizeMode="NoResize">
     <Grid>
-        <Label x:Name="labelActivity" Content="Activity" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textboxActivity" HorizontalAlignment="Left" Height="23" Margin="60,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270"/>
-        <Button x:Name="buttonAddActivity" Content="Add" HorizontalAlignment="Right" Height="23" Margin="0,20,10,0" VerticalAlignment="Top" Width="40"/>
-        <DataGrid x:Name="dataGridActivities" HorizontalAlignment="Stretch" Height="300" Margin="10,60,10,0" VerticalAlignment="Top"/>
-        <Button x:Name="buttonStartTracking" Content="Start" HorizontalAlignment="Left" Margin="70,370,0,10" VerticalAlignment="Bottom" Width="40"/>
-        <Button x:Name="buttonStopTracking" Content="Stop" HorizontalAlignment="Left" Margin="120,370,0,10" VerticalAlignment="Bottom" Width="40"/>
-        <Button x:Name="buttonClose" Content="Close" HorizontalAlignment="Right" Margin="0,370,10,10" VerticalAlignment="Bottom" Width="40"/>
-        <ComboBox x:Name="comboBoxTimespan" HorizontalAlignment="Left" Margin="10,370,0,10" VerticalAlignment="Bottom" Width="46"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="25"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Margin="10,0,10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"></ColumnDefinition>
+                <ColumnDefinition Width="*" ></ColumnDefinition>
+                <ColumnDefinition Width="40"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Row="0" Grid.Column="0">
+                <Label x:Name="labelActivity" Content="Activity" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+            </Grid>
+            <Grid Grid.Row="0" Grid.Column="1">
+                <TextBox x:Name="textboxActivity" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23"  TextWrapping="NoWrap" Text="" />
+            </Grid>
+            <Grid Grid.Row="0" Grid.Column="2">
+                <Button x:Name="buttonAddActivity" Content="Add" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23" Width="35"/>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="1" Margin="10,0,10,0">
+            <DataGrid x:Name="dataGridActivities" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch"/>
+        </Grid>
+
+        <Grid Grid.Row="2" Margin="10,0,10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*" ></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Row="0" Grid.Column="0">
+                <ComboBox x:Name="comboBoxTimespan" HorizontalAlignment="Left" VerticalAlignment="Center" Width="46"/>
+                <Button x:Name="buttonStartTracking" Content="Start" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40"/>
+                <Button x:Name="buttonStopTracking" Content="Stop" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40"/>
+            </Grid>
+
+            <Grid Grid.Row="0" Grid.Column="1">
+                <Button x:Name="buttonClose" Content="Close" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40"/>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
