--- a/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
+++ b/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
@@ -8,33 +8,26 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <!--<RowDefinition Height="40"></RowDefinition>-->
             <RowDefinition Height="*"></RowDefinition>
-            <!--<RowDefinition Height="25"></RowDefinition>-->
         </Grid.RowDefinitions>
-
-        <!--<Grid Grid.Row="0" Margin="10,0,10,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50"></ColumnDefinition>
-                <ColumnDefinition Width="*" ></ColumnDefinition>
-                <ColumnDefinition Width="40"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Row="0" Grid.Column="0">
-                <Label x:Name="labelActivity" Content="Activity" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Grid.Row="0" Grid.Column="1">
-                <TextBox x:Name="textboxActivity" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23"  TextWrapping="NoWrap" Text="" />
-            </Grid>
-            <Grid Grid.Row="0" Grid.Column="2">
-                <Button x:Name="buttonAddActivity" Content="Add" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23" Width="35"/>
-            </Grid>
-        </Grid>-->
 
         <Grid Grid.Row="0" Margin="10,0,10,0">
             <DataGrid x:Name="dataGridActivities" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch"
+                      AutoGenerateColumns="False"
+                      ItemsSource="{Binding Activities}"
                       SelectionMode="Single"
-                      IsReadOnly="True"/>
+                      SelectionUnit="FullRow"
+                      CanUserReorderColumns="False"
+                      CanUserSortColumns="False"
+                      CanUserResizeColumns="False"
+                      CanUserResizeRows="False"
+                      IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Timestamp" Binding="{Binding TimeStamp}" />
+                    <DataGridTextColumn Header="Activity" Binding="{Binding Text}" Width="*"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
-            
+
     </Grid>
 </UserControl>
