--- a/ActivityTracker/ActivityTracker/App.xaml
+++ b/ActivityTracker/ActivityTracker/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ActivityTracker"
+             xmlns:vm="clr-namespace:Library.ActivityTracker.ViewModels;assembly=Library.ActivityTracker"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <vm:ActivitiesViewModel x:Key="ActivitiesViewModel" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
