--- a/ActivityTracker/ActivityTracker/App.xaml
+++ b/ActivityTracker/ActivityTracker/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <vm:ActivitiesViewModel x:Key="ActivitiesViewModel" />
+            <vm:ActivityInputControlsViewModel x:Key="ActivityInputControlsViewModel" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
