--- a/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
+++ b/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
@@ -7,8 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              DataContext="{Binding Source={StaticResource ActivitiesViewModel}}">
-			 
-			     <!-- <UserControl.Resources> -->
+             
+                 <!-- <UserControl.Resources> -->
         <!-- <ResourceDictionary> -->
             <!-- <ResourceDictionary.MergedDictionaries> -->
                 <!-- <ResourceDictionary Source="pack://application:,,,/MRUTaskWorkPlugIn;Component/RwoFeatures/XamlStyles/StyleResources.xaml" /> -->
@@ -16,7 +16,7 @@
             <!-- </ResourceDictionary.MergedDictionaries> -->
         <!-- </ResourceDictionary> -->
     <!-- </UserControl.Resources> -->
-			 
+             
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
@@ -34,7 +34,7 @@
                       CanUserResizeRows="False"
                       IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Timestamp" Binding="{Binding TimeStamp}" />
+                    <DataGridTextColumn Header="Timestamp" Binding="{Binding TimeStamp, StringFormat=\{0:dd.MM.yyyy H:mm\}}" />
                     <DataGridTextColumn Header="Activity" Binding="{Binding Text}" Width="*"/>
                 </DataGrid.Columns>
             </DataGrid>
