--- a/ActivityTracker/ActivityTracker/Views/ActivityInputControlsView.xaml
+++ b/ActivityTracker/ActivityTracker/Views/ActivityInputControlsView.xaml
@@ -7,6 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              DataContext="{Binding Source={StaticResource ActivitiesViewModel}}">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/ActivityTracker;Component/XamlStyles/StyleResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
@@ -22,7 +31,7 @@
                 <Label x:Name="labelActivity" Content="Activity" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
             </Grid>
             <Grid Grid.Row="0" Grid.Column="1">
-                <TextBox x:Name="textboxActivity" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23" TextWrapping="NoWrap">
+                <TextBox x:Name="textboxActivity" Style="{StaticResource textboxActivityStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23" TextWrapping="NoWrap">
                     <TextBox.Text>
                         <Binding Path="Text" Mode="TwoWay" ValidatesOnDataErrors="True" NotifyOnValidationError="True"
                              UpdateSourceTrigger="PropertyChanged" />
@@ -30,7 +39,10 @@
                 </TextBox>
             </Grid>
             <Grid Grid.Row="0" Grid.Column="2">
-                <Button x:Name="buttonAddActivity" Command="{Binding SubmitActivity, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" Content="Add" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23" Width="35"/>
+                <Button x:Name="buttonAddActivity" Style="{StaticResource buttonAddActivityStyle}"
+                        ToolTipService.ShowOnDisabled="True"
+                        Command="{Binding AddActivity, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                        Content="Add" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="23" Width="35"/>
             </Grid>
         </Grid>
     </Grid>
