--- a/ActivityTracker/ActivityTracker/Views/ActivityTimerControlsView.xaml
+++ b/ActivityTracker/ActivityTracker/Views/ActivityTimerControlsView.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ActivityTracker.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             DataContext="{Binding Source={StaticResource ActivitiesViewModel}}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"></RowDefinition>
@@ -24,7 +25,7 @@
             </Grid>
 
             <Grid Grid.Row="0" Grid.Column="1">
-                <Button x:Name="buttonClose" Content="Close" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40"/>
+                <Button x:Name="buttonSave" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40"/>
             </Grid>
         </Grid>
 
