--- a/ActivityTracker/ActivityTracker/App.xaml
+++ b/ActivityTracker/ActivityTracker/App.xaml
@@ -2,12 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ActivityTracker"
-             xmlns:vm="clr-namespace:Library.ActivityTracker.ViewModels;assembly=Library.ActivityTracker"
+             xmlns:vm="clr-namespace:ActivityTracker.ViewModels"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <vm:ActivitiesViewModel x:Key="ActivitiesViewModel" />
-            <vm:ActivityInputControlsViewModel x:Key="ActivityInputControlsViewModel" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
