--- a/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
+++ b/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
@@ -26,6 +26,7 @@
                       IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Timestamp" Binding="{Binding TimeStamp, StringFormat=\{0:dd.MM.yyyy HH:mm:ss\}}" />
+                    <DataGridTextColumn Header="W4a" Binding="{Binding OrderNumber}" />
                     <DataGridTextColumn Header="Activity" Binding="{Binding Text}" Width="*"/>
                 </DataGrid.Columns>
             </DataGrid>
