[Refs #12] added Guid to ActivityModel, added SelectedRecord property to view model

--- a/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
+++ b/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
@@ -19,6 +19,7 @@
                       ItemsSource="{Binding Activities}"
                       SelectionMode="Single"
                       SelectionUnit="FullRow"
+                      SelectedItem="{Binding Path=SelectedRecord, Mode=TwoWay}"
                       CanUserReorderColumns="False"
                       CanUserSortColumns="False"
                       CanUserResizeColumns="True"
