--- a/ActivityTracker/ActivityTracker/XamlStyles/StyleResources.xaml
+++ b/ActivityTracker/ActivityTracker/XamlStyles/StyleResources.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ActivityTracker.XamlStyles">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="Button" x:Key="buttonAddActivityStyle">
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="true">
