* exchanged TextItem with ComboBox * added command DuplicateActivity

--- a/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
+++ b/ActivityTracker/ActivityTracker/Views/ActivitiesView.xaml
@@ -41,6 +41,7 @@
                 <DataGrid.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Delete Activity" Command="{Binding DeleteActivity, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CommandParameter="{Binding SelectedRecord}" />
+                        <MenuItem Header="Duplicate Activity" Command="{Binding DuplicateActivity}" CommandParameter="{Binding SelectedRecord}" />
                     </ContextMenu>
                 </DataGrid.ContextMenu>
             </DataGrid>
